--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    scroll-behavior: smooth;
 }
 
 a {
