--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,16 @@ a.button {
 }
 
 a.button:hover {
-    color: #21F5A8;
+    color: #21b9f5;
 }
 
 h1 {
     font-size: 25pt;
 }
 
+i {
+    color: #21b9f5;
+}
 
 ::-webkit-scrollbar {
     width: 5px;
@@ -46,7 +49,7 @@ h1 {
 
 ::-webkit-scrollbar-thumb {
     width: 5px;
-    background-color: #21F5A8;
+    background-color: #21b9f5;
 }
 
 /*HEADER*/
@@ -63,10 +66,6 @@ h1 {
     z-index: 10000;
 }
 
-i {
-    color: #21F5A8;
-}
-
 #nav {
     display: flex;
     flex-direction: row;
@@ -78,7 +77,7 @@ i {
 #header h1:hover {
     cursor: pointer;
     transform: scale(1.05);
-    color: #21F5A8;
+    color: #21b9f5;
 }
 
 #nav ul {
@@ -90,7 +89,7 @@ i {
 
 #nav li:hover {
     cursor: pointer;
-    color: #21F5A8;
+    color: #21b9f5;
 }
 
 /*MAIN*/
@@ -124,7 +123,7 @@ i {
     background-color: #f0f0f0;
 }
 
-#bgfetec img {
+img#bgfetec {
     position: sticky;
     top: 0;
     z-index: -1;
@@ -153,9 +152,11 @@ i {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    gap: 100px;
+    flex-wrap: wrap;
+    padding: 5vh 0;
+    row-gap: 5vh;
     width: 100vw;
-    height: 80vh;
+    min-height: 80vh;
     background-color: #f0f0f0;  
 }
 
@@ -166,7 +167,7 @@ i {
 
 #exposicoes {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     justify-content: center;
     gap: 100px;
@@ -176,8 +177,10 @@ i {
 
 #exposicoes #div {
     display: flex;
+    justify-content: space-between;
+    width: 75vw;
     gap: 20px;
-    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .ger {
